Display Resolution Compatible

--- a/AimYourself/App.config
+++ b/AimYourself/App.config
@@ -11,16 +11,16 @@
     <userSettings>
         <AimYourself.Properties.Settings>
             <setting name="length" serializeAs="String">
-                <value>20</value>
+                <value>10</value>
             </setting>
             <setting name="thickness" serializeAs="String">
                 <value>2</value>
             </setting>
             <setting name="gap" serializeAs="String">
-                <value>10</value>
+                <value>8</value>
             </setting>
             <setting name="drawPointFlag" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="drawOutlineFlag" serializeAs="String">
                 <value>True</value>
@@ -41,7 +41,7 @@
                 <value>True</value>
             </setting>
             <setting name="color" serializeAs="String">
-                <value>Red</value>
+                <value>Lime</value>
             </setting>
             <setting name="doubleBuffered" serializeAs="String">
                 <value>False</value>
